# softloq-unicode-hpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_75ad1cfa84db81028619a29bba1c13bd.html  dir_75ad1cfa84db81028619a29bba1c13bd.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: cmake-single-platform.yml  docs.yml  testing.yml
d0/df5/: unicode_8hpp.html  unicode_8hpp.js  unicode_8hpp_source.html
d5/d17/: structSoftloq_1_1Unicode_1_1Error-members.html
d9/d99/: error_8hpp.html  error_8hpp.js  error_8hpp_source.html
d9/dce/: structSoftloq_1_1Unicode_1_1Error.html  structSoftloq_1_1Unicode_1_1Error.js
db/dbe/: macros_8hpp.html  macros_8hpp.js  macros_8hpp_source.html
include/softloq-unicode/: error.hpp  macros.hpp  unicode.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  variables_0.js
src/: unicode.cpp
src/softloq-unicode/: unicode.cpp
tests/: unicode_macros.cpp  unicode_test.cpp
